qlcplus (4.13.1) stable; urgency=low

  * engine: fix blackout not working
  * engine: include relative EFX in blackout
  * engine: fix RGB Matrix clone control mode
  * Show Manager: improve resume after pause
  * Virtual Console: fix OSC feedback regression
  * Virtual Console/Slider: add an optional button to flash in playback mode
  * Virtual Console/XY Pad: copy presets when cloning (thanks to Hans-Jürgen Tappe)
  * Plugins/DMX USB: restore Vince DMX512 output (thanks to Jérôme Lebleu)
  * Plugins/HID: add merger mode for DMX devices (thanks to qfulmina)
  * Web Access: added getWidgetSubIdList API and Animation widget sub-control example (API test page updated)
  * New fixtures: beamZ BAC500 and BAC506 (thanks to Olivier Michel)
  * New fixtures: American DJ Par Z4, beamZ SB400, OXO ColorBeam 7 FCW IR, Pro-Lights Pixie Spot (thanks to Dmitry Kolesnikov)
  * New fixtures: BoomToneDJ LED PAR 7X10W 5in1, BoomToneDJ Maxi Spot 60, Mac Mah FLAT PAR 7x12W 6in1, Eurolite LED PIX-16 QCL Bar (thanks to Cédric Monféfoul)
  * New fixture: Showtec ACT PC 60 RGBW (thanks to Michel Sliepenbeek)
  * New fixtures: Robe LEDBeam 350, Robe LEDBeam 350 RGBA, Briteq COB Blinder 2x100W, Ayrton MiniPanel FX (thanks to Giacomo Gorini)
  * New fixture: Elation ELED B48 (thanks to Xoneoo)
  * New fixture: beamZ PS10W (thanks to Jesper Korsen)
  * New fixtures: Ayra ComPar 10 and ERO 406 (thanks to René Knuvers)
  * New fixtures: Mac Mah Moving-FX Bar, Varytec LED Pad Bar Compact ST RGB, Laserworld EL-400RGB MK2 (thanks to Clément Delabroye)
  * New fixtures: Electroconcept Club Scan 30, Club Scan 120, LED Blinder, Profile 120 Spot LED, Micro Spot 60 LED (thanks to Clément Delabroye)
  * New fixture: Ayrton Mistral (thanks to Masatoshi Fujino)
  * New fixture: Chauvet COLORtube 3.0 EQ Controller (thanks to Fede79)
  * New fixture: Shehds Big Bee Eyes LED Wash 19x40W RGBW (thanks to István Király)
  * New fixture: Fun-Generation Mr. Beam 120 W (thanks to Mariano)
