@@ -4,11 +4,13 @@ qlcplus (4.13.1) stable; urgency=low
   * engine: include relative EFX in blackout
   * engine: fix RGB Matrix clone control mode
   * Show Manager: improve resume after pause
+  * Show Manager: don't freeze on infinite duration Chasers/Sequences
   * Virtual Console: fix OSC feedback regression
   * Virtual Console/Slider: add an optional button to flash in playback mode
   * Virtual Console/XY Pad: copy presets when cloning (thanks to Hans-Jürgen Tappe)
   * Plugins/DMX USB: restore Vince DMX512 output (thanks to Jérôme Lebleu)
   * Plugins/HID: add merger mode for DMX devices (thanks to qfulmina)
+  * Plugins/HID: improve devices naming (thanks to qfulmina)
   * Web Access: added getWidgetSubIdList API and Animation widget sub-control example (API test page updated)
   * New fixtures: beamZ BAC500 and BAC506 (thanks to Olivier Michel)
   * New fixtures: American DJ Par Z4, beamZ SB400, OXO ColorBeam 7 FCW IR, Pro-Lights Pixie Spot (thanks to Dmitry Kolesnikov)
